--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -5,7 +5,7 @@ github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_BhavyaVino
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-summary: Prior to pursuing a career in Data Science, I completed my degree in Data analytics for business. This program covered Machine learning, Data visualization, Financial analytics and Advanced statistics. 
+summary: I am a results-oriented person who is passionate about software development. I have more than two years of experience as an IT professional. This experience helped me to build a detail-oriented, analytical mindset and exposed me to the work culture and the agile methodologies followed in the large-scale industries. Before pursuing a career in Data Science, I completed my degree in Data analytics for business. This program covered Machine learning, Data visualization, Financial Analytics, and Advanced statistics. Through my passion to understand the needs of clients and the ability to quickly learn new technologies, I will be a great fit to the team. 
 
 # Group your skills by level.
 # Your skills can be anything software related (e.g. language, frameworks, methodologies, software, etc.).
@@ -42,24 +42,9 @@ jarvis_projects:
   - name: "Core Java Apps"
     git_url: "/core_java"
     description:
-      - "Twitter App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "JDBC App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "Grep App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-  - name: "Springboot App"
-    git_url: "/springboot"
-    description: ""
-  - name: "Python Data Analytics"
-    git_url: "/python_data_anlytics"
-    description: ""
-  - name: "Hadoop"
-    git_url: "/hadoop"
-    description: ""
-  - name: "Spark"
-    git_url: "/spark"
-    description: ""
-  - name: "Cloud/DevOps"
-    git_url: "/cloud_devops"
-    description: ""
+   
+      - "JDBC App:Created an application using JDBC API to perform CRUD operations on a PostgreSQL database. App functionality implemented using the DAO design pattern. "
+      - "Grep App:Developed a Java grep application on Intelij that implements grep command in Linux. This application recursively searches for a user input text pattern in the directory for lines that match the specified regular expression. The implemented code was then optimized using Lambda and Stream API. "
 
 # List of personal or academic projects
 # Feel free to add more projects
@@ -70,9 +55,9 @@ highlighted_projects:
     git_url: "https://github.com/jarviscanada/jarvis_profile_builder"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
     description: Utilized Numpy, Pandas, and Scikit-Learn to apply different machine learning concepts, cleaned, prepped, and used clustering to group the given organization into two tickers. Performed financial analysis to identify and recommend the best company to make an acquisition.
-  - name: "Machine Learning"
-    git_url:
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
+
+
+
 
 #List of professional experience
 #The job description allows hiring managers to understand your job and the technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
@@ -88,36 +73,27 @@ professional_experience:
     company: "Disney Streaming Service"
     duration: "2019-2021"
     description: "Worked with coworkers to identify and resolve software issues of customers, improving customer satisfaction rate. Maintained effective communication with the colleagues to improve the productivity."
+  - title: "Jr.Data Analyst"
+    company: "IBS Software"
+    duration: "2015-2018"
+    description: "Worked on agile CRM projects as a Jr. Analyst. Identified test scenarios and performed functional and API testing on CRM data to increase the 87% retention rate of users and targeted marketing. Created dashboards in Tableau and presented the insights and findings to the customers and management."
 
-#List of edcuatione
 education: 
   - school_name: "St. Clair college"
     duration: "2019-2020"
     degree: "Post graduate diploma"
     department: "Data Analytics for Business"
-    # optional
-    awards_achievements: 
-      - "Scholarship"
-      - "Dean's List (2015, 2016): Ut enim ad minim veniam"
-      - "GPA: 3.8/4.0"
-  - school_name: "XYZ university"
-    duration: "2016-2018"
-    degree: "Master of Engineering"
-    department: "Electrical and Computer Engineering"
-    awards_achievements: 
+    awards_achievements:
+  - school_name: "Government College of Engineering, Kerala, India"
+    duration: "2015-2018"
+    degree: "Bachelor of Technology"
+    department: "Computer Science Engineering"
+    awards_achievements:
+ 
 
-#Optional section
 others:
     #category
-  - title: "Certificates"
-    #list of items
-    bullets:
-      - "Udacity Machine Learning (2019)"
-  - title: "Awards"
-    bullets:
-      - "Winner"
-  - title: "Activities/Hobbies"
-    bullets:
-      - "Basketball player"
-      - "Competitive gaming"
-      - "Volunteer, ABC Food bank: Ut enim ad minim veniam"
+ - title: "Activities/Hobbies"
+   bullets: 
+      - "Badminton Player"
+      - "Volunteer : Windsor Public Library-Teaching Assistant"
